--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,22 +24,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
-          ruby-version: '3.1'
-          bundler-cache: true
+          python-version: '3.11'
+          
+      - name: Install dependencies
+        run: |
+          pip install -r docs/requirements.txt
           
       - name: Setup Pages
         uses: actions/configure-pages@v4
         
-      - name: Build with Jekyll
+      - name: Build with MkDocs
         run: |
-          cd docs
-          bundle install
-          bundle exec jekyll build
-        env:
-          JEKYLL_ENV: production
+          mkdocs build -f docs/mkdocs.yml -d docs/_site
           
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
