--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -38,7 +38,8 @@ jobs:
         
       - name: Build with MkDocs
         run: |
-          mkdocs build -f docs/mkdocs.yml -d docs/_site
+          cd docs
+          mkdocs build -d _site
           
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
