Restructure MkDocs configuration
- Move mkdocs.yml to repository root
- Update workflow to build from root
- Fix docs_dir and site_dir paths

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -38,13 +38,12 @@ jobs:
         
       - name: Build with MkDocs
         run: |
-          cd docs
-          mkdocs build -d _site
+          mkdocs build
           
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/_site
+          path: site
 
   deploy:
     environment:
