--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,8 @@ site_url: https://odgaard.github.io/catbench/
 site_description: A benchmarking framework for evaluating computational performance and energy efficiency
 repo_url: https://github.com/odgaard/catbench
 repo_name: odgaard/catbench
-docs_dir: .
+docs_dir: docs
+site_dir: site
 
 theme:
   name: material
